# mahoupao

./: .gitignore  README.md  ~$主爬视频文档.docx  博主爬视频文档.docx
.claude/: settings.local.json
video-analysis/video-analysis/: PYTHON_DEV_GUIDE.md  dev-progress-2026-02-21.md  dev-progress-2026-02-23.md  dev-progress-2026-02-24.md  dev-progress-2026-02-25.md
video-analysis/video-analysis/.claude/: settings.local.json
video-analysis/video-analysis/docs/: dev-progress-2026-02-21.md  dev-progress-2026-02-23.md  dev-progress-2026-02-24.md  dev-progress-2026-02-25.md  dev-progress-2026-02-26.md  report-xhs-downloader.md
video-analysis/video-analysis/logs/: video_urls_20260220_230635.txt  video_urls_20260220_234038.txt
video-analysis/video-analysis/video-analysis-loader/: pyproject.toml  requirements.txt  run_server.py  test_download.py
video-analysis/video-analysis/video-analysis-loader/.claude/: settings.local.json
video-analysis/video-analysis/video-analysis-loader/src/: __init__.py
video-analysis/video-analysis/video-analysis-loader/src/api/: routes.py  schemas.py
video-analysis/video-analysis/video-analysis-loader/src/config/: settings.py
video-analysis/video-analysis/video-analysis-loader/src/core/: events.py  interfaces.py  models.py
video-analysis/video-analysis/video-analysis-loader/src/downloaders/: base.py  douyin.py  rednote.py
video-analysis/video-analysis/video-analysis-loader/src/services/: download_service.py
video-analysis/video-analysis/video-analysis-loader/src/utils/: logger.py
video-analysis/video-analysis/video-analysis-loader/video_downloader.egg-info/: PKG-INFO  requires.txt
video-analysis/video-analysis/video-analysis-maker/: api.py  (+4 more)
(+181 files in other folders)
